--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -2,7 +2,7 @@
 	overflow:hidden;
 	}
 thead{
-	background-color: #66bdd7;
+	background-color: #053256;
 }
 #myInput {
 	border-radius: 1rem;
@@ -33,7 +33,7 @@ input[type="button"], input[type="submit"] {
 	outline: none;
     padding: 9.1px 0; 
     border: none;
-    background-color:#66bdd7;;
+    background-color:#053256;;
     color: #fff;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
@@ -64,7 +64,7 @@ a:focus, a:hover {
 }
 i
 {
-	color: #66bdd7;
+	color: #053256;
 }
 img {
 	width: 100%;
@@ -87,9 +87,9 @@ img {
 	position:relative;
 }
 .logo-w3 img,.footer img {
-       width: 54%;
+         width: 75%;
     position: absolute;
-    margin: -11px 42px;
+    margin: 2px 42px;
 }
 .footer img {
 	width:13%;
@@ -135,7 +135,7 @@ img {
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #fff;
-    background-color:#66bdd7;
+    background-color:#053256;
 }
 .search-agileinfo input[type="search"] {
     width: 87%;
@@ -155,12 +155,12 @@ img {
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     color: #fff;
-    background-color:#66bdd7;
+    background-color:#053256;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
 	  color:#fff;
-	   background-color:#66bdd7;
+	   background-color:#053256;
 }
 .dropdown-menu.multi {
     min-width: 745px;
@@ -195,7 +195,7 @@ button.search {
     height: 43px;
     outline: none;
     box-shadow: none;
-    background:#66bdd7;
+    background:#053256;
     padding: 0;
     border-radius: inherit;
     -webkit-appearance: none;
@@ -279,7 +279,7 @@ button.w3view-cart:focus{
 	margin-top:20px;
 }
 .banner-agile a:hover{
-	background:#66bdd7;
+	background:#053256;
 }
 /*--//banner--*/
 
@@ -509,7 +509,7 @@ ul.resp-tabs-list li:nth-child(3):after{
 .product-img .p-mask, .row .product .vm-product-media-container .p-mask {
     opacity: 1;
     visibility: visible;
-    background:#66bdd7;
+    background:#053256;
     bottom: 0%;
 	left:0;
     position: absolute;
@@ -634,7 +634,7 @@ button.w3ls-cart.pw3ls-cart .fa{
   left: 15px;
   right: 15px;
   bottom: 0;
-  background:#66bdd7;
+  background:#053256;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transition-property: transform;
@@ -708,12 +708,12 @@ ul.wmuSliderPagination {
 	border-radius:50%;
 }
 .wmuSliderPagination a.wmuActive {
-	background: #66bdd7;
-    box-shadow: 0px 0px 10px #66bdd7;
-	-webkit-box-shadow: 0px 0px 10px #66bdd7;
-	-moz-box-shadow: 0px 0px 10px #66bdd7;
-	-o-box-shadow: 0px 0px 10px #66bdd7;
-	-ms-box-shadow: 0px 0px 10px #66bdd7;
+	background: #053256;
+    box-shadow: 0px 0px 10px #053256;
+	-webkit-box-shadow: 0px 0px 10px #053256;
+	-moz-box-shadow: 0px 0px 10px #053256;
+	-o-box-shadow: 0px 0px 10px #053256;
+	-ms-box-shadow: 0px 0px 10px #053256;
 }
 /* Default Skin */
 .wmuGallery .wmuGalleryImage {
@@ -797,7 +797,7 @@ ul.wmuSliderPagination {
     padding: 9.2px 0;
     width: 15%;
     border: none;
-	background-color: #66bdd7;
+	background-color: #053256;
 	color:#fff;
 }
 .w3agile_newsletter_right input[type="submit"]:hover{
@@ -880,7 +880,7 @@ ul.wmuSliderPagination {
 	color:#000;
 }
 .footer ul li a:hover{
-	color:#66bdd7;
+	color:#053256;
 }
 p.copy-right{
 	text-align:center;
@@ -1022,12 +1022,12 @@ p.sbmincart-empty-text {
 	-o-border-radius: 10px;
 	-ms-border-radius: 10px;
     border-radius: 10px;
-    background: #66bdd7;
-	-moz-box-shadow: inset 0 0 6px #66bdd7;
-	-o-box-shadow: inset 0 0 6px #66bdd7;
-	-ms-box-shadow: inset 0 0 6px #66bdd7;
-    -webkit-box-shadow: inset 0 0 6px #66bdd7;
-	box-shadow: inset 0 0 6px #66bdd7; 	
+    background: #053256;
+	-moz-box-shadow: inset 0 0 6px #053256;
+	-o-box-shadow: inset 0 0 6px #053256;
+	-ms-box-shadow: inset 0 0 6px #053256;
+    -webkit-box-shadow: inset 0 0 6px #053256;
+	box-shadow: inset 0 0 6px #053256; 	
 } 
 /*-- //cart-css --*/ 
 
@@ -1043,7 +1043,7 @@ p.sbmincart-empty-text {
 }
 .w3ls_dresses_grid_left_grid h3:before {
     content: '';
-    background: #66bdd7;
+    background: #053256;
     width: 10%;
     height: 2px;
     position: absolute;
@@ -1153,7 +1153,7 @@ p.sbmincart-empty-text {
 	outline:none;
 }
 .contact input[type="submit"] {
-   background: #66bdd7;
+   background: #053256;
     padding: 8px 15px;
     outline: none;
 	margin-top:10px;
@@ -1177,7 +1177,7 @@ p.sbmincart-empty-text {
 /*-- about --*/
 .about h4 {
     font-size: 2.2em;
-    color: #66bdd7;
+    color: #053256;
     text-align: left;
 }
 .about img {
@@ -1283,12 +1283,12 @@ p.sbmincart-empty-text {
 .nbs-flexisel-nav-left {
     left: 0;
     background: url(../images/img-sprite.png) no-repeat 5px center;
-    background-color:#66bdd7;
+    background-color:#053256;
 }
 .nbs-flexisel-nav-right { 
 	right: 0%;
     background: url(../images/img-sprite.png) no-repeat -20px center;
-    background-color: #66bdd7;
+    background-color: #053256;
 }
 /*-- //about --*/
 /*-- products --*/
@@ -1331,7 +1331,7 @@ p.sbmincart-empty-text {
     line-height: 24px;
 }
 .overlay {
-    background:#66bdd733;
+    background:#05325633;
     text-align: center;
     position: absolute;
     left: 0;
@@ -1397,7 +1397,7 @@ p.sbmincart-empty-text {
 }
 .about-bottom  a{
 	padding:8px 20px;
-	background:#66bdd7;
+	background:#053256;
 	color:#fff;
 	float:right;
 }
@@ -1558,7 +1558,7 @@ a.pa_italic:focus {
   background-color: #FF4136;
 } 
 .Message--green {
-  background-color: #66bdd7;
+  background-color: #053256;
 } 
 .Message-icon {
   display: table-cell;
@@ -1691,7 +1691,7 @@ input.invalid,select.invalid {
 }
 
 button {
-  background-color: #66bdd7;
+  background-color: #053256;
   color: #ffffff;
   border: none;
   padding: 10px 20px;
@@ -1720,11 +1720,11 @@ button:hover {
 
 .step.active {
   opacity: 1;
-  background-color: #66bdd7; 
+  background-color: #053256; 
 }
 .step.finish {
   opacity: 1;
-  background-color: #66bdd7;
+  background-color: #053256;
 }
 
 /*--- Responsive Code ---*/
@@ -1760,7 +1760,7 @@ button:hover {
 }
 .tabs a {
   background-color: #ECECEC;
-  border-bottom: 1px solid #66bdd7; 
+  border-bottom: 1px solid #053256; 
   font-weight: 700;
   display: block;
   letter-spacing: 0;
@@ -1793,7 +1793,7 @@ button:hover {
 
 .current a {
   color: #fff;
-  background: #66bdd7;
+  background: #053256;
 }
 
    
@@ -1802,7 +1802,7 @@ button:hover {
         margin-top:25px;
         height:auto;
         padding-bottom:10px;
-        background-color:#66bdd7;
+        background-color:#053256;
         }
         #exCollapsingNavbar3 li a:hover
         {
@@ -1977,7 +1977,7 @@ button:hover {
 .single-top-right h3 {
     text-transform: capitalize;
     font-size: 4em;
-    color: #66bdd7;
+    color: #053256;
     margin-bottom: .3em;
     text-align: left;
 }
@@ -2041,9 +2041,9 @@ p.single-price-text {
     -ms-transition: .5s all;
     transition: .5s all;
     display: inline-block;
-    background: #66bdd7;
+    background: #053256;
     outline: none;
-    border: 1px solid #66bdd7;
+    border: 1px solid #053256;
     color: #fff;
 }
 .single-top-right .w3ls-cart:hover{
@@ -2056,11 +2056,11 @@ p.single-price-text {
 .single-top-right .w3ls-cart.w3ls-cart-like {
     margin-left: 1em;
     background: none;
-    border: 1px solid  #66bdd7;
-    color: #66bdd7;
+    border: 1px solid  #053256;
+    color: #053256;
 }
 .single-top-right .w3ls-cart.w3ls-cart-like:hover{ 
-    background:  #66bdd7;
+    background:  #053256;
     color: #fff;
 } 
 .single-page-icons.social-icons {
@@ -2183,7 +2183,7 @@ p.single-price-text {
 }
 .key i {
     float: left;
-    color: #66bdd7;
+    color: #053256;
     
     
 }
@@ -2199,7 +2199,7 @@ p.single-price-text {
     background: none; */
 }
 .form-w3agile input[type="submit"] {
-    background: #66bdd7;
+    background: #053256;
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
@@ -2215,7 +2215,7 @@ p.single-price-text {
 }
 .forg a {
     text-decoration: none;
-    color: #66bdd7;
+    color: #053256;
     font-size: 1em;
 }
 .forg-right {
@@ -2294,16 +2294,20 @@ a.at-in{
     padding: 7px 10px;
     width: auto;
     font-size: 1em;
-    background: #66bdd7;
+    background: #053256;
 }
 .add-1:hover {
     text-decoration: none; 
-    background: #66bdd7;
+    background: #053256;
 	color: #fff;
 }
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    color: #222222;
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > tfoot > tr > td {
+    color: #f8f8f8;
 }
+ .table > thead > tr > td, .table > tbody > tr > td
+ {	
+ color: #222222;
+ }
 /*--quantity-starts--*/
 .quantity{
 	margin: 1.5em 0;
@@ -2770,7 +2774,7 @@ p.w3-agile{
 	}
 	.navbar-toggle {
 		border-radius: 0;
-		background:#66bdd7;
+		background:#053256;
 		float:none;
 		transition: 0.5s all;
 		-webkit-transition: 0.5s all;
@@ -3243,7 +3247,7 @@ p.w3-agile{
 		font-size: 1.8em;
 	}
 	.about-w3ls-row {
-		background: #66bdd7;
+		background: #053256;
 		padding: 1em;
 	}
 	.w3agile_newsletter_left, .w3agile_newsletter_right {
