--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -41,6 +41,11 @@ input[type="button"], input[type="submit"] {
 	-o-transition: 0.5s all;
 	-ms-transition: 0.5s all;
 }
+
+.collapsible-header p {
+	color:#fff;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
